# 7wd-engine

./: LICENSE  README.md  main.py  requirements.txt  setup.cfg
swd/: action.py  agents.py  assets.py  board_card.py  bonuses.py  cards.py  cards_board.py  entity.py  entity_manager.py  game.py  main.py  military_track.py  play.py  player.py  price.py  progress_tokens.py  wonders.py
swd/resources/: cards.yaml  tokens.yaml  wonders.yaml
swd/states/: cards_board_state.py  game_state.py  military_state_track.py  player_state.py
tests/: test_cards.py  test_cards_board.py  test_entity_manager.py  test_military_track.py  test_wonders.py
