[metadata]
name = swd
version = 0.0.1
author = Dmitrii Fomin
author_email = fomin.dm@gmail.com
description = Engine for the board game "7 Wonders: Duel"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfomin/7wd-engine
project_urls =
    Bug Tracker = https://github.com/dfomin/7wd-engine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = swd
packages = find:
python_requires = >=3.9

[options.packages.find]
where = swd